--- a/Views/Layouts/Contents/Templates/dashboard.html
+++ b/Views/Layouts/Contents/Templates/dashboard.html
@@ -527,6 +527,8 @@ The above copyright notice and this permission notice shall be included in all c
   </div>
   <!--   Core JS Files   -->
   <script src="../assets/js/core/jquery.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="../assets/DataTables/datatables.min.css"/>
+  <script type="text/javascript" src="../assets/DataTables/datatables.min.js"></script>
   <script src="../assets/js/core/popper.min.js"></script>
   <script src="../assets/js/core/bootstrap-material-design.min.js"></script>
   <script src="../assets/js/plugins/perfect-scrollbar.jquery.min.js"></script>
@@ -569,8 +571,6 @@ The above copyright notice and this permission notice shall be included in all c
   <!-- Material Dashboard DEMO methods, don't include it in your project! -->
   <script src="../assets/demo/demo.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-  <link rel="stylesheet" type="text/css" href="../assets/DataTables/datatables.min.css"/>
-  <script type="text/javascript" src="../assets/DataTables/datatables.min.js"></script>s
   <script>
     $(document).ready(function() {
       $().ready(function() {
