--- a/Views/Layouts/Contents/Templates/dashboard.html
+++ b/Views/Layouts/Contents/Templates/dashboard.html
@@ -942,7 +942,7 @@ The above copyright notice and this permission notice shall be included in all c
                   label: 'HORAS',
                   // backgroundColor: 'rgb(255, 99, 132)',
                   scaleFontColor: "#FFFFFF",
-                  borderColor: '#f34f03',
+                  borderColor: '#FFFFFF',
                   data: hoursOfView
               }]
           },
@@ -962,7 +962,7 @@ The above copyright notice and this permission notice shall be included in all c
               datasets: [{
                   label: 'HORAS',
                   // backgroundColor: 'rgb(255, 99, 132)',
-                  borderColor: 'rgb(255, 99, 132)',
+                  borderColor: '#FFFFFF',
                   data: hoursOfViewLocations
               }]
           },
