--- a/Views/Layouts/Contents/Templates/dashboard.html
+++ b/Views/Layouts/Contents/Templates/dashboard.html
@@ -923,7 +923,7 @@ The above copyright notice and this permission notice shall be included in all c
               removeTables();
               getTables();
               getCharts(channelsName, channelsTimeOfView, LocationsName, LocationsTimeOfView);
-              console.log(ChannelsViewObj);
+              console.log();
     }
   });
     });
