--- a/Views/Layouts/Contents/assets/css/material-dashboard.css
+++ b/Views/Layouts/Contents/assets/css/material-dashboard.css
@@ -15570,7 +15570,7 @@ fieldset[disabled] .form-group.is-focused .togglebutton label {
 }
 
 .main-panel>.content {
-  margin-top: 70px;
+  /*margin-top: 70px;*/
   padding: 30px 15px;
   min-height: calc(100vh - 123px);
 }
@@ -16986,7 +16986,6 @@ thead.thead-inverse th,
 }
 
 body {
-  background-color: #eee;
   color: #3C4858;
   font-weight: 300;
 }
