Actualizacion guia json

--- a/Views/Layouts/Contents/Templates/Devices.html
+++ b/Views/Layouts/Contents/Templates/Devices.html
@@ -449,7 +449,7 @@ The above copyright notice and this permission notice shall be included in all c
 </script>
 <script>
     //
-    var SourceControllers = 'http://172.16.0.15/BBINCOTV/IPTV/Core/Controllers/';
+    var SourceControllers = '/BBINCOTV/IPTV/Core/Controllers/';
 
     var DevicesOn = document.getElementById('DevicesOn'),
         DevicesOff = document.getElementById('DevicesOff'),
