--- a/Views/Layouts/Tv/Styles/TvMin.css
+++ b/Views/Layouts/Tv/Styles/TvMin.css
@@ -31,27 +31,36 @@ div#EpgChannels {
     position: fixed;
     width: 16%;
     height: 35%;
-    bottom: 3%;
+    bottom: 15%;
     left: 1%;
     overflow: hidden;
+    border-radius: 10px 0px 0px 10px;
+    
 }
 
 div#EpgPrograms {
     position: fixed;
     width: 82%;
     height: 35%;
-    bottom: 3%;
+    bottom: 15%;
     right: 1%;
     overflow: hidden;
+    border-radius: 10px;
+    border-radius: 0px 10px 10px 0px;
 }
 
 div#EpgProgramInfo {
     position: fixed;
-    width: 67%;
-    height: 48%;
+    width: 50%;
+    height: 30%;
     top: 9%;
-    right: 1%;
+    right: 17%;
     font-size: 22px;
+    background-color: #246681;
+    border-radius: 10px;
+    border-style: solid;
+    border-color: #0396a6;
+    
 }
 
 div#EpgHours {
@@ -59,25 +68,37 @@ div#EpgHours {
     width: 82%;
     height: 5%;
     right: 1%;
-    bottom: 38%;
+    bottom: 50%;
     background-size: 100% 100%;
 }
 
 /***************************** [Header] *****************************/
+div#EpgNowAiring {
+    width: 32%;
+    height: 6%;
+    position: fixed;
+    padding-left: 2%;
+    padding-top: 1%;
+    text-align: center;
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+}
 
 div#EpgDate {
-    width: 48%;
-    text-align: right;
-    font-size: 25px;
+    width: 50%;
     height: 100%;
-    float: right;
-    margin-right: 2%;
+    padding-left:32%;
+    padding-top: 2%;
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
 }
 
 div#EpgWeather {
-    width: 50%;
-    float: left;
+    width: 45%;
     height: 100%;
+    float: right;
 }
 
 div#WeatherSummary {
@@ -91,24 +112,17 @@ div#WeatherSummary {
 }
 
 div#TemperatureGroup {
-    float: left;
-    width: 25%;
+    width: 30%;
     height: 100%;
-    text-align: center;
-    font-size: 23px;
-    padding-top: 1%;
-
-}
-
-div#EpgNowAiring {
-    width: 29.5%;
-    height: 6%;
-    text-align: center;
+    padding-left: 25%;
+    padding-top: 2%;
     font-size: 20px;
-    top: 39%;
-    position: fixed;
-    left: 2%;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #0396a6;
+    text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
+    font-weight: bold;
 }
+
 
 div#EpgDays {
     width: 31%;
@@ -123,6 +137,7 @@ div#EpgDays {
 div#EpgDay {
     width: 90%;
     float: left;
+    display: none;
 }
 
 #EpgDays b {
@@ -175,7 +190,10 @@ div.HourRow {
     float: left;
     width: 20%;
     height: 100%;
-    font-size: 32px;
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    background-color: #182e3a;
 }
 
 /***************************** [PROGRAMAS] *****************************/
@@ -188,6 +206,7 @@ div.HourRow {
     font-size: 20px;
     white-space: nowrap;
     overflow: hidden;
+    
 }
 
 .Program {
@@ -208,6 +227,9 @@ div#ProgramRow4,
 div#ProgramRow5 {
     width: 100%;
     height: 20%;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    background-color: #246681;
 }
 
 div#ChannelRow1,
@@ -217,6 +239,7 @@ div#ChannelRow4,
 div#ChannelRow5 {
     height: 20%;
     width: 100%;
+    background-color: #2f4142;
 }
 
 /***************************** [INFO] *****************************/
@@ -225,6 +248,7 @@ div.EpgLogo {
     width: 6%;
     overflow: hidden;
     float: right;
+    padding-right: 30%;
     /*background:#fff;*/
     /*border-radius: 50px;*/
     height: 12%;
@@ -236,14 +260,22 @@ div.EpgLogo {
     background-repeat: no-repeat;
 }
 
+/*Contiene logo empresa*/
+div#EpgMainLogo {
+    /*background-image: url('Media/Logos/mainlogo.png');*/
+    position: fixed;
+    width: 10%;
+    height: 30%;
+    top: 9%;
+    margin-left: 84.5%;
+}
 
 div#EpgTitle {
     width: 87%;
     height: 15%;
-    font-weight: bold;
     text-align: justify;
     font-size: 23px;
-    text-shadow:4px 4px 6px rgb(0, 0, 0);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     overflow: hidden;
     white-space: pre-wrap;
 }
@@ -252,8 +284,9 @@ div#EpgDescription {
     width: 100%;
     height: 45%;
     text-align: justify;
-    font-size: 22px;
+    font-size: 20px;
     padding-top: 1%;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 div#EpgEpisode{
@@ -261,11 +294,13 @@ div#EpgEpisode{
     height: 15%;
     float: right;
     padding-top: 2%;
+    display: none;
 }
 
 div#EpgTime {
-    width: 30%;
+    width: 32%;
     float: left;
+    font-size: 20px;
     text-align: left;
 }
 
@@ -273,15 +308,17 @@ div#EpgDuration {
     width: 25%;
     float: left;
     text-align: center;
+    display: none;
 }
 
 div#EpgRating {
     width: 25%;
     float: right;
     text-align: center;
-    color: #e3c15a;
-    font-weight: bold;
-    font-size: 25px;
+    font-size: 20px;
+    color: #0396a6;
+    text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
+    font-weight: bold;    
 }
 
 div#EpgStars {
@@ -289,26 +326,27 @@ div#EpgStars {
     float: right;
     text-align: center;
     color: #e3c15a;
+    display: none;
 }
 
 div#EpgRecording {
     width: 50%;
     float: left;
+    display: none;
 }
 
 div#EpgSerie {
     float: left;
     width: 50%;
+    display: none;
 }
 
 
-div#EpgStars,
+div#EpgStars, 
 div#EpgRating,
 div#EpgDuration,
 div#EpgTime
 {
-    border-bottom: 1px solid rgba(255,255,255,0.5);
-    border-top: 1px solid rgba(255,255,255,0.5);
     height: 9%;
 }
 
