--- a/Views/Layouts/Tv/Styles/TvMin.css
+++ b/Views/Layouts/Tv/Styles/TvMin.css
@@ -32,21 +32,24 @@ div#EpgChannels {
     width: 16%;
     height: 35%;
     bottom: 15%;
-    left: 1%;
+    left: 4%;
     overflow: hidden;
-    border-radius: 10px 0px 0px 10px;
+    /*border-top-left-radius:15px;*/
+    /*border-bottom-left-radius:15px;*/
+    border-radius: 15px 0px 0px 15px;
     
 }
 
 div#EpgPrograms {
     position: fixed;
-    width: 82%;
+    width: 76%;
     height: 35%;
     bottom: 15%;
-    right: 1%;
+    right: 4%;
     overflow: hidden;
-    border-radius: 10px;
-    border-radius: 0px 10px 10px 0px;
+    /*border-top-right-radius:15px;*/
+   /* border-bottom-right-radius:15px;*/
+    border-radius: 0px 15px 15px 0px;
 }
 
 div#EpgProgramInfo {
@@ -55,7 +58,6 @@ div#EpgProgramInfo {
     height: 30%;
     top: 9%;
     right: 17%;
-    font-size: 22px;
     background-color: #246681;
     border-radius: 10px;
     border-style: solid;
@@ -65,7 +67,7 @@ div#EpgProgramInfo {
 
 div#EpgHours {
     position: fixed;
-    width: 82%;
+    width: 76%;
     height: 5%;
     right: 1%;
     bottom: 50%;
@@ -78,7 +80,7 @@ div#EpgNowAiring {
     height: 6%;
     position: fixed;
     padding-left: 2%;
-    padding-top: 1%;
+    padding-top: 1.5%;
     text-align: center;
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
@@ -86,17 +88,17 @@ div#EpgNowAiring {
 }
 
 div#EpgDate {
-    width: 50%;
+    width: 60%;
     height: 100%;
     padding-left:32%;
     padding-top: 2%;
-    font-size: 20px;
+    font-size: 18px;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
 }
 
 div#EpgWeather {
-    width: 45%;
+    width: 40%;
     height: 100%;
     float: right;
 }
@@ -106,17 +108,17 @@ div#WeatherSummary {
     width: 25%;
     height: 100%;
     text-align: center;
-    font-size: 23px;
+    font-size: 20px;
     padding-top: 0.5%;
     display: none;
 }
 
 div#TemperatureGroup {
-    width: 30%;
+    width: 35;
     height: 100%;
-    padding-left: 25%;
+    padding-left: 35%;
     padding-top: 2%;
-    font-size: 20px;
+    font-size: 18px;
     font-family: Arial, Helvetica, sans-serif;
     color: #0396a6;
     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
@@ -125,24 +127,71 @@ div#TemperatureGroup {
 
 
 div#EpgDays {
-    width: 31%;
-    height: 6%;
-    text-align: center;
-    font-size: 25px;
-    bottom: 45%;
+    width: 20%;
+    height: 5%;
+    bottom: 50%;
     position: fixed;
-    left: 1%;
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    margin-left: 10%;
+    text-shadow: 4px 3px 2px rgba(0,0,0,0.5);
 }
 
 div#EpgDay {
     width: 90%;
     float: left;
-    display: none;
+ 
 }
 
 #EpgDays b {
     float: left;
 }
+
+/***************************** Estilo BackgroundInfo *****************************/
+div#InfoContainer{
+    width: 90%;
+    left:5%;
+    margin-bottom:2%;
+    color: #fff;
+ }
+
+ div.Title {
+    margin-right: 2%;
+    color: #dfbe5e;
+    font-weight: bold;
+    font-size: 23px;
+    font-family: Gotham Light;
+ }
+
+ div.Time{
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 15px;
+    text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
+ }
+
+ div.Description {
+     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+     font-size: 15px;
+     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
+ }
+ 
+ div.ChannelName,
+ div.ChannelNumber,
+ div.Date{ 
+    margin-top: 2%;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
+
+ }  
+
+ div.Quality,
+ div.Duration
+ {
+     display: none;
+ }
 
 /***************************** [FRAME] *****************************/
 
@@ -191,8 +240,6 @@ div.HourRow {
     width: 20%;
     height: 100%;
     font-size: 20px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
     background-color: #182e3a;
 }
 
@@ -212,12 +259,13 @@ div.HourRow {
 .Program {
     margin: 0;
     float: left;
-    font-size: 24px;
+    font-size: 20px;
     white-space: nowrap;
     overflow: hidden;
     height: 100%;
     line-height: 50px;
     background-size: 100% 100%;
+    outline: 1px solid rgba(24, 46, 58, 0.9);
 }
 
 div#ProgramRow1,
@@ -262,7 +310,6 @@ div.EpgLogo {
 
 /*Contiene logo empresa*/
 div#EpgMainLogo {
-    /*background-image: url('Media/Logos/mainlogo.png');*/
     position: fixed;
     width: 10%;
     height: 30%;
@@ -273,20 +320,51 @@ div#EpgMainLogo {
 div#EpgTitle {
     width: 87%;
     height: 15%;
-    text-align: justify;
-    font-size: 23px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin-top: 2%;
+    margin-left: 1%;
     overflow: hidden;
     white-space: pre-wrap;
+    text-align: justify;
+    font-size: 23px;
+    font-family: Gotham Light;
+    text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
 }
 
 div#EpgDescription {
-    width: 100%;
-    height: 45%;
-    text-align: justify;
-    font-size: 20px;
+    width: 98%;
+    height: 30%;
+    margin-left: 1%;
     padding-top: 1%;
+    text-align: justify;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 15px;
+    text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
+}
+
+div#EpgTime {
+    width: 25%;
+    height: 10%;
+    margin-top: 2%;
+    margin-left: 1%;
+    float: left;
+}
+
+div#EpgRating {
+    width: 25%;
+    height: 10%;
+    float: right;
+    margin-top: 2%;
+    margin-right: 48%;
+    color: #0396a6;
+}
+
+div#EpgRating,
+div#EpgTime{
+    text-align: left;
+    font-size: 15px;
+    font-weight: bold;   
+    font-family: Arial, Helvetica, sans-serif;
+    text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
 }
 
 div#EpgEpisode{
@@ -296,33 +374,16 @@ div#EpgEpisode{
     padding-top: 2%;
     display: none;
 }
-
-div#EpgTime {
-    width: 32%;
-    float: left;
-    font-size: 20px;
-    text-align: left;
-}
-
 div#EpgDuration {
     width: 25%;
+    height: 9%;
     float: left;
     text-align: center;
     display: none;
 }
-
-div#EpgRating {
-    width: 25%;
-    float: right;
-    text-align: center;
-    font-size: 20px;
-    color: #0396a6;
-    text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
-    font-weight: bold;    
-}
-
 div#EpgStars {
     width: 20%;
+    height: 9%;
     float: right;
     text-align: center;
     color: #e3c15a;
@@ -339,15 +400,6 @@ div#EpgSerie {
     float: left;
     width: 50%;
     display: none;
-}
-
-
-div#EpgStars, 
-div#EpgRating,
-div#EpgDuration,
-div#EpgTime
-{
-    height: 9%;
 }
 
 /***************************** [Video/PauseLive Bar] *****************************/
@@ -397,13 +449,13 @@ div#BarStatus {
 
 div#RecordingOptions {
     width: 30%;
-    height: 43%;
+    height: 40%;
+    position: fixed;
+    text-align: center;
     background-size: 100% 100%;
     right: 35%;
     top: 40%;
-    border-radius: 6px;
-    position: fixed;
-    text-align: center;
+    border-radius: 10px;
     z-index: 1;
 }
 
@@ -418,15 +470,18 @@ div.RecordingOptionsButton {
     display: inline-block;
     vertical-align: middle;
     line-height: normal;
-    margin: 2%;
+    margin: 0.5%;
     min-height: 15%;
     border-radius: 5px;
+    margin-top: 2.5%;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 
 div.RecordingOptionFocus {
-    box-shadow: 6px 6px rgba(0,0,0,0.5);
-    text-shadow: 3px 3px 4px #000;
+    background: rgba(223, 190, 94, 0.9);
+    color: #000;
+    font-weight: bold;
 }
 
 div#RecorderMessage {
@@ -442,6 +497,70 @@ div#RecorderMessage {
     display: none;
 }
 
+/***************************** [ PVR DESIGN ] *****************************/
+div#PvrNow {
+    width: 28%;
+    height: 4%;
+    position: fixed;
+    margin-left: 3.2%;
+    top:5%;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 25px;
+    color: #fff;
+    text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
+}
+
+div#PvrMainLogo {
+    width: 28%;
+    height: 35%;
+    position: fixed;
+    margin-left: 3.2%;
+    top: 50%;
+    box-shadow: 0 0 4px #000;
+    border-radius: 10px;
+    background-color: #2f4142;
+}
+
+div#PvrMainLogo img{
+    display: block;
+    margin-top: 10%;
+    margin-left: auto;
+    margin-right: auto;
+
+}
+
+div#PvrWeather{
+    width: 25%;
+    height: 4%;
+    position: fixed;
+    margin-left: 4.5%;
+    top:87%;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 18px;
+    color: #0396a6;
+    text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
+    text-align: center;
+}
+
+.PvrSun {
+    color: #fff;
+}
+
+div#PvrDate{
+    width: 25%;
+    height: 4%;
+    position: fixed;
+    margin-left: 4.5%;
+    top: 90%;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 18px;
+    color: #fff;
+    text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
+    text-align: center;
+}
 
 div#PvrContainer {
     width: 100%;
@@ -453,64 +572,72 @@ div#PvrContainer {
     z-index: 0;
 }
 
-/* Panel grabador */
-
 div.PvrHeader {
-    width: 65%;
+    width: 62%;
     height: 5%;
     position: fixed;
-    right: 2%;
+    right: 5%;
     text-align: center;
-    top: 13%;
+    top: 9%;
     font-size: 35px;
+    background-color: #246681;
+    border-radius: 10px;
 }
 
 div#CurrentPvrOption {
     width: 70%;
     margin: 0 auto;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 35px;
 }
 
 .PvrChevronLeft {
     left: 0;
     position: absolute;
     top: 1%;
+    color: #dfbe5e;
 }
 
 .PvrChevronRight {
     right: 0;
     position: absolute;
     top: 0;
+    color: #dfbe5e;
 }
 
 div#PvrList {
-    width: 65%;
-    height: 75%;
+    width: 62%;
+    height: 43%;
     position: fixed;
-    right: 2%;
-    bottom: 5%;
+    right: 5%;
+    bottom: 42%;
 }
 
 div.PvrProgram {
-    width: 99%;
-    height: 8%;
+    width: 100%;
+    height: 10%;
     float: right;
-    font-size: 26px;
-    margin: 0.7%;
     white-space: nowrap;
     overflow: hidden;
+    font-size: 23px;
+    margin: 0.2%;
+    background: #2f414a;
+    border-radius: 10px;
 }
 
 .PvrProgramFocus {
-    box-shadow: 4px 4px rgba(0,0,0,0.5);
-    text-shadow: 3px 3px 4px #000;
-    background: rgba(0, 0, 0, 0.3);
-    width: 99%;
-    height: 8%;
+    width: 100%;
+    height: 10%;
     float: right;
-    font-size: 26px;
-    margin: 0.7%;
     white-space: nowrap;
     overflow: hidden;
+    font-size: 23px;
+    margin: 0.1%;
+    color:#000;
+    font-weight: bold;
+    background: #dfbe5e;
+    border-radius: 10px;
 }
 
 div#PvrOptions {
@@ -548,88 +675,98 @@ div#PvrDeleteOptions {
 }
 
 div#PvrInfo{
-    width: 30%;
-    height: 50%;
+    width: 62%;
+    height: 23%;
     position: fixed;
-    bottom: 8%;
-    left: 2%;
+    bottom: 13%;
+    left: 33%;
+    border-radius: 10px;
+    border: 1px solid rgba(3,150,166);
+    background-color: #246681;
 }
 
-
+div#PvrProgramDate,
 div#PvrProgramDuration,
 div#PvrProgramEpisode,
 div#PvrProgramStars {
-    font-size: 25px;
-}
-
-div#PvrProgramDate {
-    font-weight: bold;
-    font-size: 28px;
-}
-
-div#PvrProgramDuration {
-    float: left;
-}
-
-div#PvrProgramStars {
-    float: right;
-    text-align: right;
-    color: #ddbe61;
-}
-
-div#PvrProgramEpisode {
-    color: #90c3e1;
-    font-style: italic;
-    width: 100%;
-    float: right;
-}
-
-div#PvrProgramDescription {
-    font-size: 21px;
-    overflow: hidden;
-    width: 100%;
-    float: right;
+    display: none;
 }
 
 div#PvrProgramTitle {
-    width: 30%;
+    width: 40%;
+    height: 4%;
+    margin-top:0.5%;
+    margin-left: 1%;
     position: fixed;
-    bottom: 3%;
-    font-style: italic;
-    color: #eed098;
-    font-size: 20px;
     overflow: hidden;
     white-space: nowrap;
+    color: #dfbe5e;
+    font-size: 23px;
+    font-family: Gotham Light;
+    text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
+}
+
+div#PvrProgramRecordingData{
+    width: 40%;
+    height: 4%;
+    margin-top: 3%;
+    margin-left: 1%;
+    position: fixed;
+    overflow: hidden;
+    color: #fff;
+    font-size: 18px;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
+}
+
+div#PvrProgramDescription {
+    width: 62%;
+    height: 10%;
+    margin-top: 5.5%;
+    margin-left: 1%;
+    position: fixed;
+    overflow: hidden;
+    text-align: left;
+    color: #fff;
+    font-size: 15px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
 }
 
 /* Info grabador (disco) */
 
 div#PvrDiskInfo {
-    width: 65%;
+    width: 62%;
     height: 6%;
     position: fixed;
-    right: 2%;
-    top: 2%;
+    right: 5%;
+    top: 89%;
     font-size: 20px;
 }
 
 div#UsedSize {
+    width: 62%;
+    height: 6%;
+    top:93%;
+    text-align: right;
+    position: fixed;
     font-weight: bold;
-    margin: 0.5%;
 }
 
 div.BarUsedSize {
-    width: 65%;
-    border: 1px solid rgba(255,255,255,0.5);
+    width: 62%;
     height: 4%;
-    border-radius: 5px;
+    background: rgba(255,255,255,0.5);
+    border-radius: 10px;
     position: fixed;
 }
 
 div#BarUsedSize {
-    background: rgba(0,0,0,0.5);
-    text-align: right;
-    border-radius: 5px;
+    background: #0396a6;
+    color: #000;
+    text-align: left;
+    border-radius: 10px;
 }
 
 div#RecordPlayOptions {
