--- a/Views/Styles/Themes/DarkBlue.css
+++ b/Views/Styles/Themes/DarkBlue.css
@@ -18,23 +18,24 @@ p.ChannelNumber,
 p.ChannelName,
 div.HourRow 
 {
-    font-family: ostrich;
+    font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
 }
 
 /********** INFO ***********/
 
 div.BackgroundInfo {
-    color: #ffffff;
-    background-image: url('Blue/info.jpg');
+    background: no-repeat;
+    background-image: url('DarkBlue/info.png');
     opacity: 0.8;
 }
+
 
 /********** CONTENEDORES EPG Y PVR***********/
 
 div#PvrContainer,
 div#EpgContainer {
-    color: #ffffff;
+    color: #fff;
     background-image: url('DarkBlue/epg.png');
 }
 
@@ -56,6 +57,7 @@ div#EpgDays {
 div#ProgramFocus {
     background: rgba(223, 190, 94, 0.9);
     color: #000;
+    font-weight: bold;
 }
 
 .Program
@@ -67,8 +69,10 @@ p.ChannelNumber,
 p.ChannelName,
 div.HourRow 
 {
-    text-shadow: 4px 3px 2px rgba(0,0,0,0.5);
-    font-size: 30px;
+    text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
 }
 
 /********** PVR ***********/
@@ -78,7 +82,7 @@ div#PvrDeleteOptions,
 div#RecordPlayOptions,
 div#RecordingManualOptions,
 div#RecordingOptions {
-    background-image: url(' Blue/square.jpg');
+    background-image: url('DarkBlue/square.png');
     box-shadow: 6px 6px rgba(0,0,0,0.5);
     background-size: 100% 100%;
 }
@@ -86,6 +90,6 @@ div#RecordingOptions {
 div.PvrOptionsButton,
 div.RecordingManualOptionsButton,
 div.RecordingOptionsButton {
-    background: rgba(223, 223, 223, 0.28);
+    background: #2f414a;
     color: #fff;
 }
