--- a/Views/Layouts/Tv/Styles/TvMin.css
+++ b/Views/Layouts/Tv/Styles/TvMin.css
@@ -79,9 +79,9 @@ div#EpgNowAiring {
     width: 32%;
     height: 6%;
     position: fixed;
-    padding-left: 2%;
-    padding-top: 1.5%;
-    text-align: center;
+    padding-left: 3%;
+    padding-top: 2.5%;
+    text-align: left;
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
@@ -89,9 +89,10 @@ div#EpgNowAiring {
 
 div#EpgDate {
     width: 60%;
-    height: 100%;
-    padding-left:32%;
-    padding-top: 2%;
+    height: 5%;
+    position: fixed;
+    left: 71%;
+    top: 5%;
     font-size: 18px;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
@@ -99,25 +100,15 @@ div#EpgDate {
 
 div#EpgWeather {
     width: 40%;
-    height: 100%;
-    float: right;
-}
-
-div#WeatherSummary {
-    float: left;
-    width: 25%;
-    height: 100%;
-    text-align: center;
-    font-size: 20px;
-    padding-top: 0.5%;
-    display: none;
+    height: 5%;
+    top: 3%;
+    left: 85.5%;
+    position: fixed;
 }
 
 div#TemperatureGroup {
     width: 35;
     height: 100%;
-    padding-left: 35%;
-    padding-top: 2%;
     font-size: 18px;
     font-family: Arial, Helvetica, sans-serif;
     color: #0396a6;
@@ -156,36 +147,86 @@ div#InfoContainer{
     color: #fff;
  }
 
- div.Title {
-    margin-right: 2%;
-    color: #dfbe5e;
+ div.ChannelNumber {
+    width: 8%;
+    float: left;
+    text-align: center;
     font-weight: bold;
-    font-size: 23px;
-    font-family: Gotham Light;
- }
+    padding-bottom: 0.5%;
+    white-space: nowrap;
+}
 
- div.Time{
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
-    font-size: 15px;
-    text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
- }
+div.ChannelName {
+    width: 28%;
+    float: left;
+    padding-bottom: 0.5%;
+}
 
- div.Description {
-     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-     font-size: 15px;
-     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
- }
- 
+div.Date {
+    float: right;
+    width: 52%;
+    text-align: right;
+    padding-right: 3%;
+}
+  
  div.ChannelName,
  div.ChannelNumber,
  div.Date{ 
-    margin-top: 2%;
+    padding-top: 2%;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
 
  }  
+
+ div.Title {
+    position: fixed;
+    width: 32%;
+    height: 10%;
+    bottom: 12%;
+    left: 7.2%;
+    color: #dfbe5e;
+    font-weight: bold;
+    font-size: 23px;
+    font-family: Gotham Light;
+    text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
+ }
+
+ div.Time{
+    position: fixed;
+    width: 20%;
+    height: 10%;
+    bottom: 11.5%;
+    left: 36%;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 16px;
+    text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
+ }
+
+ div.Description {
+    position: fixed;
+    width: 82%;
+    height: 13%;
+    bottom: 5%;
+    left: 7.5%;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 18px;
+    text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
+ }
+
+ div.Rating {
+     position: fixed;
+     width: 20%;
+     height: 10%;
+     bottom: 11.5%;
+     left: 56%;
+     color: #0396a6;
+     font-family: Arial, Helvetica, sans-serif;
+     font-weight: bold;
+     font-size: 16px;
+     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
+ }
 
  div.Quality,
  div.Duration
@@ -293,16 +334,13 @@ div#ChannelRow5 {
 /***************************** [INFO] *****************************/
 
 div.EpgLogo {
-    width: 6%;
-    overflow: hidden;
-    float: right;
-    padding-right: 30%;
-    /*background:#fff;*/
-    /*border-radius: 50px;*/
-    height: 12%;
+    position: fixed;
+    width: 5%;
+    height: 8%;
+    top: 10%;
+    right: 18%;
     margin-right: 1%;
-    margin-top: 3%;
-    text-align: center;
+    overflow: hidden;
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
@@ -318,7 +356,7 @@ div#EpgMainLogo {
 }
 
 div#EpgTitle {
-    width: 87%;
+    width: 75%;
     height: 15%;
     margin-top: 2%;
     margin-left: 1%;
@@ -331,37 +369,40 @@ div#EpgTitle {
 }
 
 div#EpgDescription {
-    width: 98%;
+    width: 48%;
     height: 30%;
-    margin-left: 1%;
+    margin-left: 0.5%;
     padding-top: 1%;
+    position: fixed;
+    top: 18%;
     text-align: justify;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 15px;
+    font-size: 18px;
     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
 }
 
 div#EpgTime {
     width: 25%;
     height: 10%;
-    margin-top: 2%;
-    margin-left: 1%;
-    float: left;
+    position: fixed;
+    top: 16%;
+    margin-left: 0.5%;
+    
 }
 
 div#EpgRating {
     width: 25%;
     height: 10%;
-    float: right;
-    margin-top: 2%;
-    margin-right: 48%;
+    position: fixed;
+    top: 16%;
+    left: 48%;
     color: #0396a6;
 }
 
 div#EpgRating,
 div#EpgTime{
     text-align: left;
-    font-size: 15px;
+    font-size: 16px;
     font-weight: bold;   
     font-family: Arial, Helvetica, sans-serif;
     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
@@ -506,7 +547,7 @@ div#PvrNow {
     top:5%;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
-    font-size: 25px;
+    font-size: 20px;
     color: #fff;
     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
 }
@@ -553,6 +594,7 @@ div#PvrDate{
     height: 4%;
     position: fixed;
     margin-left: 4.5%;
+    margin-top: 1%;
     top: 90%;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
@@ -685,7 +727,6 @@ div#PvrInfo{
     background-color: #246681;
 }
 
-div#PvrProgramDate,
 div#PvrProgramDuration,
 div#PvrProgramEpisode,
 div#PvrProgramStars {
@@ -706,7 +747,7 @@ div#PvrProgramTitle {
     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
 }
 
-div#PvrProgramRecordingData{
+div#PvrProgramDate{
     width: 40%;
     height: 4%;
     margin-top: 3%;
@@ -729,7 +770,7 @@ div#PvrProgramDescription {
     overflow: hidden;
     text-align: left;
     color: #fff;
-    font-size: 15px;
+    font-size: 18px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
 }
