--- a/Views/Layouts/Contents/Styles/Movies copy.css
+++ b/Views/Layouts/Contents/Styles/Movies copy.css
@@ -211,21 +211,25 @@ div.ButtonPlayingHidden{
 /***************************** [ Recommended Movies ] *****************************/
 div#PanelRecommendedMovies {
     width: 100%;
-    height: 50%;
     display: inline-block;
+    height: 50%;
+    /* background-color: green;  */
+    color: rgb;
+    color: snow;
     overflow-x: scroll;
     overflow: hidden;
 }
 div.RecommendedMoviesRow{
-    width: 91%;
-    height: 35%;
-    margin: 0% 1% 1% 1%;
+    width: 98%;
+    float: right;
+    margin: 4.3% 1% 0% 1%;
+    height: 42%;
     display: inline-table;
 }
 
 div.RecommendedMoviesRowPoster {
     width: 18%;
-    height: 35%;
+    height: 89%;
     margin: 0% 0.6% 0% 0.6%;
     float: left;
     text-align: center;
@@ -244,25 +248,26 @@ div.RecommendedMoviesRowPoster h3 {
 }
 /***************************** [ Titulos ] *****************************/
 .PrincipalMoviesTitle{
-    color: #fff;
+    color: honeydew;
     font-size: 30px;
-    text-align: left;
-    text-shadow: 2px 2px 2px #000;
-    font-family: bebas;
+    text-align: center;
+    text-shadow: 0.1em 0.1em 0.2em black;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 /***************************** [ All Movies ] *****************************/
 div#PanelAllMovies {
     width: 100%;
     height: 100%;
-    display: inline-block;
-    overflow-x: scroll;
+    overflow-y: scroll;
+    /* background-color: red;  */
+    color: white;
     overflow: hidden;
 }
 
 div.MoviesRow{
     width: 98%;
     float: right;
-    margin: 0% 1% 0% 1%;
+    margin: 4.3% 1% 0% 1%;
     height: 42%;
 }
 
@@ -288,13 +293,12 @@ div.RowPoster h3 {
 /***************************** [ Contenedores generales ] *****************************/
 
 div#PanelHeader {
-    width: 100%;
-    height: 10%;
+    width: 10%;
+    height: 100%;
     position: fixed;
     top: 0;
     z-index: 1;
     color: #fff;
-    background: #0E4D92;
 }
 
 div#PanelLeft {
@@ -308,10 +312,10 @@ div#PanelLeft {
 }
 
 div#PanelRight {
-    width: 85%;
-    height: 85%;
+    width: 70%;
+    height: 95%;
     position: fixed;
-    left: 12%;
+    right: 0;
     bottom: 2%;
     z-index: 1;
 }
@@ -332,57 +336,45 @@ div#BackgroundPanel {
 }
 
 /***************************** [ Cabezera ] *****************************/
-div#Title {
-    width:15%;
-    height: 8%;
-    position: fixed;
-    top: 3%;
-    left:3%;
-    font-family: bebas;
-    font-size: 30px;
-    text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
 
+div#MenuHour {
+    font-size: 50px;
+    width: 29%;
+    text-align: left;
+    font-family: bebas;
+    height: 7%;
+    margin: 1% 0% 0% 3%;
+    position: fixed;
+    z-index: 1;
 }
 
 div#MenuDate {
-    width: 10%;
-    height: 8%;
-    position: fixed;
-    top: 3%;
-    right:10%;
-    text-align: right;
-    font-family: bebas;
-    font-size: 30px;
-    text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
-}
-
-div#MenuHour {
-    width: 8%;
-    height: 8%;
-    position: fixed;
-    top: 3%;
-    right: 1%;
+    font-size: 20px;
+    width: 29%;
     text-align: left;
-    font-family: bebas;
-    font-size: 30px;
-    text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
+    font-family: poppins;
+    margin: 0% 0% 0% 3%;
+    position: fixed;
+    top: 9%;
+    z-index: 1;
 }
 
 div#MenuOptions {
     width: 5%;
-    height: 80%;
+    text-align: center;
+    height: 85%;
+    bottom: 0;
     position: fixed;
-    top: 12%;
     left: 3%;
     z-index: 1;
 }
 
 div.MenuOptions {
     width: 100%;
-    height: 10%;
     float: left;
     font-size: 35px;
     text-align: center;
+    height: 10%;
     border-radius: 5px;
 }
 
@@ -471,15 +463,18 @@ div#MoviePanel {
 
 
 div.MovieTitle {
-width: 75%;
-right: 1%;
-top: 8%;
-position: fixed;
-text-align: left;
-font-size: 50px;
+/*    font-size: 39px;
+    width: 80%;
+    font-weight: bold;
+    float: left;
+    margin-top: 2%;*/
+font-size: 40px;
+width: 80%;
 font-weight: bold;
-font-family: bebas;
-color: #ffff;
+float: left;
+margin-top: 4%;
+font-family: gloss;
+color: #ffffce;
 }
 
 .Poster {
@@ -491,33 +486,33 @@ border-radius: 8px;
 }
 
 div.MovieDuration {
-    position: fixed;
-    top:18%;
-    left: 35%;
     width: 15%;
+    float: left;
+    margin: 1% 0%;
     text-align: center;
+    padding: 0.3%;
 }
 
 div.Genders {
-    position: fixed;
-    top:18%;
-    right: 20%;
     width: 30%;
+    float: left;
+    margin: 1% 0%;
     text-align: left;
+    padding: 0.3%;
 }
 
 div.Year {
-    position: fixed;
-    top:18%;
-    right: 10%;
     width: 12%;
+    float: left;
+    margin: 1% 0%;
     text-align: center;
+    padding: 0.3%;
 }
 
 div.Rating {
-    position: fixed;
-    top:17%;
-    right: 4%;
+    width: 5%;
+    float: left;
+    margin: 0.5% 0%;
     text-align: center;
     font-size: 30px;
     text-shadow: 2px 2px 2px #000;
@@ -526,36 +521,30 @@ div.Rating {
 }
 
 div.Score {
-    position: fixed;
-    top:18%;
-    left: 24%;
-    width: 5%;
-    border: 3px solid #0E4D92;
+    width: 3.3%;
+    float: left;
+    border: 3px solid #008ECC;
     border-radius: 60px;
     font-size: 25px;
+    margin: 1% 0%;
     text-align: center;
+    padding: 0.3%;
 }
 
 div.Star {
+    float: left;
+    color: #008ECC;
     width: 3.5%;
-    position: fixed;
-    top: 16.5%;
-    left: 29.5%;
-    color: #0E4D92;
     border-radius: 60px;
     font-size: 30px;
     text-align: center;
-    
+    padding: 0.3%;
 }
 
 div.MovieDescription {
-    width: 72%;
-    right: 4%;
-    top: 25%;
-    position: fixed;
+    width: 75%;
     font-weight: bold;
-    text-align: justify;
- 
+    float: left;
 }
 
 div#PlayPanel {
@@ -571,19 +560,17 @@ div#ExitPanel {
 }
 
 div.Casting {
-    position: fixed;
     width: 90%;
-    bottom: 20%;
-    left: 6%;
+    float: left;
+    margin: 1% 1% 0% 3%;
     text-align: left;
     font-size: 23px;
 }
 
 div.Director {
-    position: fixed;
     width: 90%;
-    bottom: 30%;
-    left: 6%;
+    float: left;
+    margin: 2% 1% 1% 3%;
     text-align: left;
     font-size: 23px;
 }
