Actualizacion TTF y estilos

--- a/Views/Layouts/Tv/Styles/TvMin.css
+++ b/Views/Layouts/Tv/Styles/TvMin.css
@@ -372,7 +372,7 @@ div#EpgTitle {
     white-space: pre-wrap;
     text-align: justify;
     font-size: 23px;
-    font-family: Gotham Light;
+    font-family: gotham;
     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
 }
 
