--- a/Views/Layouts/Tv/Styles/TvMin.css
+++ b/Views/Layouts/Tv/Styles/TvMin.css
@@ -79,7 +79,7 @@ div#EpgNowAiring {
     padding-top: 2.5%;
     text-align: left;
     font-size: 20px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Arial Rounded MT Bold";
     font-weight: bold;
 }
 
