--- a/Views/Layouts/Tv/Styles/TvMin.css
+++ b/Views/Layouts/Tv/Styles/TvMin.css
@@ -79,7 +79,7 @@ div#EpgNowAiring {
     padding-top: 2.5%;
     text-align: left;
     font-size: 20px;
-    font-family: "Arial Rounded MT Bold";
+    font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
 }
 
@@ -91,7 +91,7 @@ div#EpgDate {
     top: 5%;
     text-align: right;
     font-size: 18px;
-    font-family: "Arial Rounded MT Bold";
+    font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
 }
 
@@ -372,7 +372,7 @@ div#EpgTitle {
     white-space: pre-wrap;
     text-align: justify;
     font-size: 23px;
-    font-family: gotham;
+    font-family: Gotham Light;
     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
 }
 
@@ -413,7 +413,7 @@ div#EpgTime{
     text-align: left;
     font-size: 16px;
     font-weight: bold;
-    font-family: "Arial Rounded MT Bold";
+    font-family: Arial, Helvetica, sans-serif;
     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
 }
 
