--- a/Views/Layouts/Contents/Styles/Movies.css
+++ b/Views/Layouts/Contents/Styles/Movies.css
@@ -150,8 +150,8 @@ div#PanelMoviesByGender {
 div#MenuFilters {
     font-size: 25px;
     color: #fff;
-    width: 31%;
-    height: 100%;
+    width: 20%;
+    height: 90%;
     margin: 0;
     visibility: hidden;
     bottom: 0;
@@ -159,6 +159,7 @@ div#MenuFilters {
     /* background-image: url("../../vod/mvs/bg/bg4.jpg"); */
     z-index: 1;
     text-align: center;
+    background: #1f2326;
 }
 
 div.OptionsFilter {
@@ -465,7 +466,7 @@ div#MoviePanel {
     visibility: hidden;
     bottom: 0;
     position: fixed;
-    background: #131313;
+    background: #1f2326;
     z-index: 1;
 }
 
@@ -473,7 +474,7 @@ div#MoviePanel {
 div.MovieTitle {
 width: 75%;
 right: 1%;
-top: 8%;
+top: 5%;
 position: fixed;
 text-align: left;
 font-size: 50px;
@@ -492,7 +493,7 @@ border-radius: 8px;
 
 div.MovieDuration {
     position: fixed;
-    top:18%;
+    top:16%;
     left: 35%;
     width: 15%;
     text-align: center;
@@ -500,7 +501,7 @@ div.MovieDuration {
 
 div.Genders {
     position: fixed;
-    top:18%;
+    top:16%;
     right: 20%;
     width: 30%;
     text-align: left;
@@ -508,7 +509,7 @@ div.Genders {
 
 div.Year {
     position: fixed;
-    top:18%;
+    top:16%;
     right: 10%;
     width: 12%;
     text-align: center;
@@ -516,30 +517,36 @@ div.Year {
 
 div.Rating {
     position: fixed;
-    top:17%;
+    top:14%;
     right: 4%;
     text-align: center;
     font-size: 30px;
     text-shadow: 2px 2px 2px #000;
     background: #616161;
+    border-radius: 5px;
+    padding: 0.2%;
     color: #FFF;
 }
 
 div.Score {
     position: fixed;
-    top:18%;
+    top:14%;
     left: 24%;
-    width: 5%;
+    height: 7%;
+    width: 4%;
     border: 3px solid #0E4D92;
     border-radius: 60px;
-    font-size: 25px;
+    font-size: 20px;
     text-align: center;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 }
 
 div.Star {
     width: 3.5%;
     position: fixed;
-    top: 16.5%;
+    top: 14%;
     left: 29.5%;
     color: #0E4D92;
     border-radius: 60px;
@@ -553,9 +560,11 @@ div.MovieDescription {
     right: 4%;
     top: 25%;
     position: fixed;
-    font-weight: bold;
     text-align: justify;
- 
+    font-weight: lighter;
+    font-family: Calibri;
+    border-top: 2px solid #0396a6;
+    padding-top: 2%;
 }
 
 div#PlayPanel {
@@ -575,8 +584,6 @@ div.Casting {
     width: 90%;
     bottom: 20%;
     left: 6%;
-    text-align: left;
-    font-size: 23px;
 }
 
 div.Director {
@@ -584,8 +591,6 @@ div.Director {
     width: 90%;
     bottom: 30%;
     left: 6%;
-    text-align: left;
-    font-size: 23px;
 }
 
 div.Buttons {
@@ -604,19 +609,24 @@ div.MovieOption {
     text-shadow: 2px 2px 2px #000;
 }
 
-.MovieDescription,
+
 .Score, 
 .MovieDuration,
 .Genders,
 .Year,
 .Rating {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 20px;
+    font-family: Arial Rounded MT Bold;
 }
 
 .Director,
 .Casting{
-    font-style: oblique;
+    text-align: left;
+    font-size: 22px;
+    font-family: Bell MT;
+    font-style: italic;
 }
+
 /***************************** [ Opciones reproduccion ] *****************************/
 
 div#PlayingPanel {
