--- a/Views/Layouts/Tv/Styles/TvMin.css
+++ b/Views/Layouts/Tv/Styles/TvMin.css
@@ -178,8 +178,7 @@ div.Date {
  div.ChannelNumber,
  div.Date{ 
     padding-top: 2%;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
+    font-family: Arial Rounded MT Bold;
     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
 
  }  
@@ -203,8 +202,7 @@ div.Date {
     height: 10%;
     bottom: 11.5%;
     left: 36%;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
+    font-family: Arial Rounded MT Bold;
     font-size: 16px;
     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
  }
@@ -215,7 +213,7 @@ div.Date {
     height: 13%;
     bottom: 5%;
     left: 7.5%;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: Calibri;
     font-size: 18px;
     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
  }
@@ -227,8 +225,7 @@ div.Date {
      bottom: 11.5%;
      left: 56%;
      color: #0396a6;
-     font-family: Arial, Helvetica, sans-serif;
-     font-weight: bold;
+     font-family: Arial Rounded MT Bold;
      font-size: 16px;
      text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
  }
@@ -385,7 +382,7 @@ div#EpgDescription {
     top: 18%;
     overflow: hidden;
     text-align: justify;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: Calibri;
     font-size: 18px;
     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
 }
@@ -413,7 +410,7 @@ div#EpgTime{
     text-align: left;
     font-size: 16px;
     font-weight: bold;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial Rounded MT Bold;
     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
 }
 
